<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/floatingActionButton"-->
<!--        android:backgroundTint="#008577"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:clickable="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:srcCompat="@drawable/ic_add_white_24dp"-->
<!--        android:visibility="invisible"/>-->


    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/CardView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#C3C3C3"
        android:backgroundTintMode="screen"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Pengeluaran"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_pemasukkan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_weight="1"
            android:text="Total"
            android:visibility="invisible"/>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/CardView1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#C3C3C3"
        android:backgroundTintMode="screen"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Pemasukkan"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_pengeluaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_weight="1"
            android:text="Total"
            android:visibility="invisible"/>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/CardView"
        app:layout_constraintStart_toStartOf="@+id/CardView"
        app:layout_constraintTop_toBottomOf="@+id/CardView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_view_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <ScrollView
        android:id="@+id/scView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/CardView1"
        app:layout_constraintStart_toStartOf="@+id/CardView1"
        app:layout_constraintTop_toBottomOf="@+id/CardView1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_view_item1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wallet2"
        android:visibility="invisible"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:fab_addButtonColorNormal="@color/white"
        app:fab_addButtonColorPressed="@color/white_pressed"
        app:fab_addButtonPlusIconColor="@color/green"
        app:fab_labelStyle="@style/custom_Fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPengeluaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/green"
            app:fab_colorPressed="@color/green_pressed"
            app:fab_icon="@drawable/ic_add_green_24dp"
            app:fab_size="mini"
            app:fab_title="Tambah Pengeluaran" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPemasukkan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/green"
            app:fab_colorPressed="@color/green_pressed"
            app:fab_icon="@drawable/ic_add_green_24dp"
            app:fab_size="mini"
            app:fab_title="Tambah Pemasukkan" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.constraintlayout.widget.ConstraintLayout>