<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddPembayaranActivity">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="Sunting"
        android:visible="false"/>
    <item
        android:id="@+id/action_delete"
        android:title="Hapus"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        app:showAsAction="always"/>
</menu>